--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,15 +22,6 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  convert_via_pandoc:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Convert
-        uses: docker://pandoc/core:2.9
-        with:
-          args: "-f README.md > index.html" # gets appended to pandoc command
   deploy:
     environment:
       name: github-pages
@@ -39,6 +30,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Convert
+        uses: docker://pandoc/core:2.9
+        with:
+          args: "-f markdown_strict README.md > index.html" # gets appended to pandoc command
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
