--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Convert
         uses: docker://pandoc/core:2.9
         with:
-          args: "-f markdown_strict README.md > index.html" # gets appended to pandoc command
+          args: "-f markdown_strict README.md -o index.html" # gets appended to pandoc command
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
